--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="w3-container">
           <h3>Aanya Brahmawar</h3>
           <p class="w3-opacity">CEO and Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Aanya Brahmawar a Badminton Champion herself believes that Sports and Fitness brings discipline in ones life. With this inclination she promotes its significance amongst children and Adults </p>
           <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
         </div>
       </div>
@@ -96,7 +96,7 @@
         <div class="w3-container">
           <h3>Saina Nehwal</h3>
           <p class="w3-opacity">Sports Guru</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Saina Nehwal is the first-ever badminton player from India to clinch an Olympic medal. The Indian shuttler created history when she won the bronze medal at the London 2012 Games. </p>
           <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
         </div>
       </div>
@@ -108,7 +108,7 @@
         <div class="w3-container">
           <h3>Yasmin Karachiwala</h3>
           <p class="w3-opacity">Fitness Expert</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>With 26 years of experience in the fitness industry, she is a sought-after name among some popular Bollywood stars. She is the owner-CEO of Yasmin Karachiwala's Body Image—fitness/gym centres.</p>
           <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
         </div>
       </div>
